--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
-            "Script\\Base": ""
+            "Script\\Base\\": ""
         }
     }
 }
