--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
     },
     "type": "magento2-module",
     "version": "1.0.0",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
+    "license": "GNU-3.0",
     "extra": {
         "map": [
             [
