--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "scriptua/magento2-base",
     "description": "N/A",
     "require": {
-      "php": "~5.5.0|~5.6.0|~7.0.0"
+      "php": "~7.0.0"
     },
     "type": "magento2-module",
-    "version": "1.0.3",
+    "version": "1.1.0",
     "license": "GNU-3.0",
     "autoload": {
         "files": [ "registration.php" ],
