--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     },
     "type": "magento2-module",
     "version": "1.1.1",
-    "license": "GNU-3.0",
+    "license": "GPL-3.0",
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
