--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "scriptua/magento2-base",
+    "name": "hryvinskyi/magento2-base",
     "description": "N/A",
     "require": {
-      "php": "~7.0.0|~7.1.0"
+      "php": "~7.0.0|~7.1.0|~7.1.0"
     },
     "type": "magento2-module",
-    "version": "1.1.2",
+    "version": "2.0.0",
     "license": "GPL-3.0",
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
-            "Script\\Base\\": ""
+            "Hryvinskyi\\Base\\": ""
         }
     }
 }
