--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,12 @@
     "name": "scriptua/magento2-base",
     "description": "N/A",
     "require": {
-      "php": "~7.0.0|~7.1.0|~7.1.0"
+        "php": "~7.1.3||~7.2.0",
+        "magento/framework": "*"
     },
     "type": "magento2-module",
-    "version": "2.0.0",
-    "license": "GPL-3.0",
+    "version": "2.0.1",
+    "license": "GPL-3.0-or-later",
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
