--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "type": "magento2-module",
     "version": "2.0.1.1",
-    "license": "GPL-3.0-or-later",
+    "license": "MIT",
     "autoload": {
         "files": [ "registration.php" ],
         "psr-4": {
