--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "scriptua/magento2-base",
+    "name": "hryvinskyi/magento2-base",
     "description": "N/A",
     "require": {
-        "php": "~7.1.3||~7.2.0||~7.3.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": "*"
     },
     "type": "magento2-module",
-    "version": "2.0.1.1",
+    "version": "2.1.0.0",
     "license": "MIT",
     "autoload": {
         "files": [ "registration.php" ],
