--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "name": "hryvinskyi/magento2-base",
     "description": "N/A",
     "require": {
+        "php": ">=8.0",
         "magento/framework": "*"
     },
     "type": "magento2-module",
-    "version": "2.1.3",
+    "version": "2.1.4",
     "license": "MIT",
     "autoload": {
         "files": [ "registration.php" ],
